--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     margin-top:20vh;
-    margin-left: 5vw;
+    margin-left: 3vw;
 
     h3 {
         margin-top: 1rem;
